docs/styles.css
/* ... */
@media (min-width: 1024px){
  .lg\:container{
    width: 100%;
  }

  @media (min-width: 640px){
    .lg\:container{
      max-width: 640px;
    }
  }

  @media (min-width: 768px){
    .lg\:container{
      max-width: 768px;
    }
  }

  @media (min-width: 1024px){
    .lg\:container{
      max-width: 1024px;
    }
  }

  @media (min-width: 1280px){
    .lg\:container{
      max-width: 1280px;
    }
  }

  @media (min-width: 1440px){
    .lg\:container{
      max-width: 1440px;
    }
  }

  @media (min-width: 1680px){
    .lg\:container{
      max-width: 1680px;
    }
  }

  @media (min-width: 1920px){
    .lg\:container{
      max-width: 1920px;
    }
  }

  .lg\:flex{
    display: flex;
  }

  .lg\:hidden{
    display: none;
  }

  .lg\:flex-row{
    flex-direction: row;
  }

  .lg\:mt-10{
    margin-top: 2.5rem;
  }

  .lg\:mt-24{
    margin-top: 6rem;
  }

  .lg\:mb-64{
    margin-bottom: 16rem;
  }

  .lg\:pb-40{
    padding-bottom: 10rem;
  }

  .lg\:w-1\/2{
    width: 50%;
  }

  .lg\:w-1\/4{
    width: 25%;
  }

  .lg\:w-4\/5{
    width: 80%;
  }
}

@media (min-width: 1280px){
  .xl\:container{
    width: 100%;
  }

  @media (min-width: 640px){
    .xl\:container{
      max-width: 640px;
    }
  }

  @media (min-width: 768px){
    .xl\:container{
      max-width: 768px;
    }
  }

  @media (min-width: 1024px){
    .xl\:container{
      max-width: 1024px;
    }
  }

  @media (min-width: 1280px){
    .xl\:container{
      max-width: 1280px;
    }
  }

  @media (min-width: 1440px){
    .xl\:container{
      max-width: 1440px;
    }
  }

  @media (min-width: 1680px){
    .xl\:container{
      max-width: 1680px;
    }
  }

  @media (min-width: 1920px){
    .xl\:container{
      max-width: 1920px;
    }
  }

  .xl\:justify-center{
    justify-content: center;
  }

  .xl\:mt-0{
    margin-top: 0;
  }

  .xl\:w-1\/2{
    width: 50%;
  }

  .xl\:w-3\/4{
    width: 75%;
  }

  .xl\:grid-cols-3{
    grid-template-columns: repeat(3, minmax(0, 1fr));
  }
}

@media (min-width: 1440px){
  .\32xl\:container{
    width: 100%;
  }

  @media (min-width: 640px){
    .\32xl\:container{
      max-width: 640px;
    }
  }

  @media (min-width: 768px){
    .\32xl\:container{
      max-width: 768px;
    }
  }

  @media (min-width: 1024px){
    .\32xl\:container{
      max-width: 1024px;
    }
  }

  @media (min-width: 1280px){
    .\32xl\:container{
      max-width: 1280px;
    }
  }

  @media (min-width: 1440px){
    .\32xl\:container{
      max-width: 1440px;
    }
  }

  @media (min-width: 1680px){
    .\32xl\:container{
      max-width: 1680px;
    }
  }

  @media (min-width: 1920px){
    .\32xl\:container{
      max-width: 1920px;
    }
  }

  .\32xl\:mt-24{
    margin-top: 6rem;
  }

  .\32xl\:w-1\/2{
    width: 50%;
  }
}

@media (min-width: 1680px){
  .\33xl\:container{
    width: 100%;
  }

  @media (min-width: 640px){
    .\33xl\:container{
      max-width: 640px;
    }
  }

  @media (min-width: 768px){
    .\33xl\:container{
      max-width: 768px;
    }
  }

  @media (min-width: 1024px){
    .\33xl\:container{
      max-width: 1024px;
    }
  }

  @media (min-width: 1280px){
    .\33xl\:container{
      max-width: 1280px;
    }
  }

  @media (min-width: 1440px){
    .\33xl\:container{
      max-width: 1440px;
    }
  }

  @media (min-width: 1680px){
    .\33xl\:container{
      max-width: 1680px;
    }
  }

  @media (min-width: 1920px){
    .\33xl\:container{
      max-width: 1920px;
    }
  }

  .\33xl\:-mt-16{
    margin-top: -4rem;
  }

  .\33xl\:px-0{
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width: 1920px){
  .\34xl\:container{
    width: 100%;
  }

  @media (min-width: 640px){
    .\34xl\:container{
      max-width: 640px;
    }
  }

  @media (min-width: 768px){
    .\34xl\:container{
      max-width: 768px;
    }
  }

  @media (min-width: 1024px){
    .\34xl\:container{
      max-width: 1024px;
    }
  }

  @media (min-width: 1280px){
    .\34xl\:container{
      max-width: 1280px;
    }
  }

  @media (min-width: 1440px){
    .\34xl\:container{
      max-width: 1440px;
    }
  }

  @media (min-width: 1680px){
    .\34xl\:container{
      max-width: 1680px;
    }
  }

  @media (min-width: 1920px){
    .\34xl\:container{
      max-width: 1920px;
    }
  }
}

